# potentials

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: base.rs  consts.rs  lib.rs  math.rs
src/angle/: cos.rs  cross.rs  harm.rs  linear.rs  mod.rs  urey.rs
src/bond/: cubic.rs  fene.rs  g96.rs  harm.rs  mod.rs  morse.rs  quart.rs
src/hbond/: dreid.rs  ljcos.rs  mod.rs
src/imp/: cos.rs  dist.rs  harm.rs  mod.rs
src/meta/: cutoff.rs  mod.rs  scaled.rs  shift.rs  softcore.rs  sum.rs  switch.rs
src/pair/: buck.rs  coul.rs  gauss.rs  lj.rs  mie.rs  mod.rs  soft.rs  yukawa.rs
src/torsion/: cos.rs  harm.rs  mod.rs  opls.rs  rb.rs
