[package]
name = "potentials"
version = "0.1.0"
authors = ["Tony Kan <tianchengkan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TKanX/potentials"
edition = "2024"
description = "A lightweight, SIMD-accelerated Rust library for classical molecular dynamics potentials, providing modular force field components (LJ, bonds, angles, torsions) for major systems like DREIDING, AMBER, and GROMOS, with high-performance, branchless kernels in no-std scientific computing."
keywords = [
    "chemistry",
    "physics",
    "molecular-dynamics",
    "force-fields",
    "no-std",
]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
libm = { version = "0.2.15", optional = true }

[dev-dependencies]
approx = "0.5"

[lib]
name = "potentials"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
